tools/tests/ui/fail/l1068.cnf
// Test file for error code: L1068
// Expected error: Overflow Semantic character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
